added cors config and added more util calls that can be unauthenticated